--- a/Thesis.bib
+++ b/Thesis.bib
@@ -1,59 +1,86 @@
 %Book on statistical inverse problems
+
 @book{Somersalo,
-	title="Statistical and Computational Inverse Problems",
-	author="E. Somersalo and J. Kaipio",
-	year="2005",
-	publisher="Springer-Verlag"
+  title={{S}tatistical and computational inverse problems},
+  author={Kaipio, J. and Somersalo, E.},
+  series={{A}pplied {M}athematical {S}ciences},
+  volume={160},
+  year={2005},
+  publisher={Springer Sience \& Business Media, New York},
+  doi={10.1007/b138659}
 }
+
+
+
 
 %Book by Jayines in Bayesian Statistics
 @book{jaynes2003probability,
   title="Probability Theory: The Logic of Science",
-  author="Jaynes, Edwin T",
+  author={Jaynes, Edwin T.},
   year="2003",
   publisher="Cambridge University Press"
 }
 
-%Article by O'hagan that talks about emulators
+
+
+
 @article{o2006bayesian,
-  title="Bayesian Analysis of Computer Code Outputs: a Tutorial",
-  author="O`Hagan, Anthony",
-  journal="Reliability Engineering \& System Safety",
-  volume="91",
-  number="10",
-  pages="1290--1300",
-  year="2006",
-  publisher="Elsevier"
+  title =	 {Bayesian analysis of computer code outputs: {A}
+                  tutorial},
+  author =	 {O'Hagan, Anthony},
+  journal =	 {Reliability Engineering \&\ System Safety},
+  volume =	 91,
+  number =	 10,
+  pages =	 {1290-1300},
+  year =	 2006,
+  publisher =	 {Elsevier}
 }
+
+
+
+
+
 
 %Article by Kennedy that complements what O'hagan said
+
+
 @article{kennedy2001bayesian,
-  title="Bayesian Calibration of Computer Models",
-  author="Kennedy, Marc C. and O'Hagan, Anthony",
-  journal="Journal of the Royal Statistical Society: Series B (Statistical Methodology)",
-  volume="63",
-  number="3",
-  pages="425--464",
-  year="2001",
-  publisher="Wiley Online Library"
+  title =	 {Bayesian calibration of computer models},
+  author =	 {Kennedy, Marc C. and O'Hagan, Anthony},
+  journal =	 {Journal of the Royal Statistical Society, Series B -- Statistical Methodology},
+  volume =	 63,
+  number =	 3,
+  pages =	 {425-464},
+  year =	 2001
 }
+
 
 %The book of sensitivity analysis that talks about Sobol indices
+
+
 @book{saltelli2000sensitivity,
-  title="Sensitivity Analysis",
-  author="Saltelli, Andrea and Chan, Karen and Scott, E. Marian and others",
-  volume="1",
-  year="2000",
-  publisher="Wiley New York"
+  title =	 {Sensitivity Analysis},
+  author =	 {Saltelli, Andrea and Chan, Karen and Scott, E. Marian},
+  volume =	 134,
+  series =	 {Wiley Series in Probability and Statistics},
+  year =	 2000,
+  publisher =	 {Wiley},
+  address =	 {New York, NY}
 }
 
+
 %Book on gaussian processes in machine  learning
+
+
+
 @book{rasmussen2006gaussian,
-  title="Gaussian Processes for Machine Learning",
-  author="Rasmussen, Carl Edward",
-  year="2006",
-  publisher="The MIT Press"
+title={{G}aussian Processes for Machine Learning},
+author={Rasmussen, C. E. and Williams, C. K. I.},
+publisher={The MIT press, Cambridge},
+year = {2006},
+url={http://www.gaussianprocess.org/gpml/}
 }
+
 
 %Article that talks about computer experiments with emphasis in space filling design
 
@@ -61,18 +88,18 @@
   title={Design of Computer Experiments: Space Filling and Beyond},
   author={Pronzato, Luc and M{\"u}ller, Werner G.},
   journal={Statistics and Computing},
-  volume={22},
-  number={3},
+  volume=22,
+  number=3,
   pages={681--701},
-  year={2012},
-  publisher={Springer}
+  year=2012,
 }
+
 
 
 %Space filling designs using minimax and maximin
 
 @article{johnson1990minimax,
-  title={Minimax and Maximin Distance Designs},
+  title={Minimax and maximin distance designs},
   author={Johnson, Mark E. and Moore, Leslie M. and Ylvisaker, Donald},
   journal={Journal of Statistical Planning and Inference},
   volume={26},
@@ -99,7 +126,7 @@
 @book{bressan1900lecture,
   title={Lecture Notes on Functional Analysis},
   author={Bressan, Alberto},
-  year={1900},
+  year={2013},
   publisher={American Mathematical Society}
 }
 
@@ -107,7 +134,7 @@
 
 @book{lifshits2013gaussian,
   title={Gaussian Random Functions},
-  author={Lifshits, Mikhail Anatolevich},
+  author={Lifshits, Mikhail A.},
   volume={322},
   year={2013},
   publisher={Springer Science \& Business Media}
@@ -117,7 +144,7 @@
 
 
 @article{dupuy2015dicedesign,
-  title="DiceDesign and DiceEval: Two R packages for Design and Analysis of Computer Experiments",
+  title="DiceDesign and DiceEval: two R packages for design and analysis of computer experiments",
   author="Dupuy, Delphine and Helbert, C{\'e}line and Franco, Jessica and others",
   journal="Journal of Statistical Software",
   volume="65",
@@ -131,7 +158,7 @@
 
 @book{thomas2013numerical,
   title={Numerical Partial Differential Equations: Finite Difference Methods},
-  author={Thomas, James William},
+  author={Thomas, James W.},
   volume={22},
   year={2013},
   publisher={Springer Science \& Business Media}
@@ -141,7 +168,7 @@
 
 @book{dudley2002real,
   title={Real Analysis and Probability},
-  author={Dudley, Richard M},
+  author={Dudley, Richard M.},
   volume={74},
   year={2002},
   publisher={Cambridge University Press}
@@ -170,8 +197,8 @@
 
 %Survey on algorithms for experimental design  
 @article{viana2010algorithm,
-  title={An Algorithm for Fast Optimal Latin hypercube Design of Experiments},
-  author={Viana, Felipe AC and Venter, Gerhard and Balabanov, Vladimir},
+  title={An algorithm for fast optimal latin hypercube design of experiments},
+  author={Viana, Felipe A. and Venter, Gerhard and Balabanov, Vladimir},
   journal={International Journal for Numerical Methods in Engineering},
   volume={82},
   number={2},
@@ -184,7 +211,7 @@
 
 %Paper by Sobol in Sobol indices.
 @article{sobol1993sensitivity,
-  title="Sensitivity Estimates for Non-linear Mathematical Models",
+  title="Sensitivity estimates for non-linear mathematical models",
   author="Sobol, Ilya M",
   journal="Mathematical Modelling and Computational Experiments",
   volume="1",
@@ -198,7 +225,7 @@
 %Best reference in measure theory
 @book{lerner2014course,
   title={A Course on Integration Theory},
-  author={Lerner, Nicolas and others},
+  author={Lerner, Nicolas},
   year={2014},
   publisher={Springer}
 }
@@ -211,47 +238,63 @@
 }
 
 %MCMC methods
+
+
+
 @book{casella2008monte,
-  title={Monte Carlo Statistical Methods},
-  author={Casella, George},
-  year={2008},
-  publisher={Springer}
+  title={{Monte Carlo statistical methods}},
+  author={Robert, Christian and Casella, George},
+  year={2013},
+  publisher={{Springer Science \& Business Media}},
+  address={New York},
+  series={Springer texts in Statisitics}
 }
 
 
 @book{adlergeometry,
-  title={The Geometry of Random Fields. 1981},
-  author={Adler, Robert J},
-  publisher={John Wiley \& Sons}
+  title={The Geometry of Random Fields},
+  author={Adler, R. J.},
+  year={2010},
+  publisher={SIAM, Philadelphia},
+  series={Classics in Applied Mathematics},
+  doi={10.1137/1.9780898718980},
+  number={62}   
 }
+
 
 
 @book{seinfeld1998atmospheric,
-  title={Atmospheric Chemistry and Physics: From Air Pollution to Climate Change},
-  author={Seinfeld, John H. and Pandis, Spyros N. and Noone, Kevin},
-  year={1998},
-  publisher={AIP}
+  title =	 {Atmospheric Chemistry and Physics: From Air Pollution
+                  to Climate Change},
+  author =	 {Seinfeld, John H. and Pandis, Spyros N.},
+  year =	 1997,
+  publisher =	 {John Wiley \&\ Sons},
+  address =	 {New York}
 }
 
 
+
 @article{hosseini2016airborne,
-  title={Airborne Contaminant Source Estimation Using a Finite-Volume Forward Solver Coupled with a Bayesian Inversion Approach},
+  title={Estimating airborne particulate emissions using a finite-volume forward solver coupled with a {B}ayesian inversion approach},
   author={Hosseini, Bamdad and Stockie, John M.},
-  journal={arXiv preprint arXiv:1607.03518},
-  year={2016}
+journal={Computers and Fluids},
+volume={154},
+pages={27--43},
+year={2017},
+url={https://doi.org/10.1016/j.compfluid.2017.05.025}
 }
 
 
 @article{monin1954basic,
-  title={Basic Laws of Turbulent Mixing in the Surface Layer of the Atmosphere},
-  author={Monin, AS and Obukhov, AMF},
-  journal={Contrib. Geophys. Inst. Acad. Sci. USSR},
-  volume={151},
-  number={163},
-  pages={e187},
-  year={1954}
+  title =	 {Basic laws of turbulent mixing in the surface layer of
+                  the atmosphere},
+  author =	 {Monin, A. S. and Obukhov, A. M.},
+  journal =	 {Contributions of the Geophysical Institute of
+                  Slovakian Academy of Sciences, USSR},
+  volume =	 151,
+  pages =	 {163-187},
+  year =	 1954
 }
-
 
 
 @book{logan2014applied,
@@ -286,7 +329,7 @@
 
 @book{arora2015optimization,
   title={Optimization: Algorithms and Applications},
-  author={Arora, Rajesh Kumar},
+  author={Arora, Rajesh K.},
   year={2015},
   publisher={CRC Press}
 }
@@ -299,8 +342,8 @@
 
 %Talks about why environmental models are not precise
 @article{chatwin1982use,
-  title={The Use of Statistics in Describing and Predicting the Effects of Dispersing Gas Clouds},
-  author={Chatwin, PC},
+  title={The use of statistics in describing and predicting the effects of dispersing gas clouds},
+  author={Chatwin, P.C.},
   journal={Journal of Hazardous Materials},
   volume={6},
   number={1-2},
@@ -311,21 +354,26 @@
 
 
 %A review in atmospheric dispersion modeling
+
+
 @article{leelHossy2014dispersion,
-  title={Dispersion Modeling of Air Pollutants in the Atmosphere: a Review},
-  author={Leel{\H{o}}ssy, {\'A}d{\'a}m and Moln{\'a}r, Ferenc and Izs{\'a}k, Ferenc and Havasi, {\'A}gnes and Lagzi, Istv{\'a}n and M{\'e}sz{\'a}ros, R{\'o}bert},
-  journal={Open Geosciences},
-  volume={6},
-  number={3},
-  pages={257--278},
-  year={2014}
+  title =	 {Dispersion modeling of air pollutants in the
+                  atmosphere: {A} review},
+  author =	 {Leel{{\"o}}ssy, {\'A}d{\'a}m and Moln{\'a}r, Ferenc
+                  and Izs{\'a}k, Ferenc and Havasi, {\'A}gnes and Lagzi,
+                  Istv{\'a}n and M{\'e}sz{\'a}ros, R{\'o}bert},
+  journal =	 {Open Geosciences},
+  volume =	 6,
+  number =	 3,
+  pages =	 {257-278},
+  year =	 2014
 }
 
 
 %Talks about uncertainty in atmospehric dispersion modeling
 @article{rao2005uncertainty,
-  title={Uncertainty Analysis in Atmospheric Dispersion Modeling},
-  author={Rao, K Shankar},
+  title={Uncertainty analysis in atmospheric dispersion modeling},
+  author={Rao, Shankar},
   journal={Pure and Applied Geophysics},
   volume={162},
   number={10},
@@ -336,8 +384,8 @@
 
 %The show that the metheorological input accounts for half the uncertaity in the output
 @article{lewellen1989meteorological,
-  title={Meteorological Data Needs for Modeling Air Quality Uncertainties},
-  author={Lewellen, WS and Sykes, RI},
+  title={Meteorological data needs for modeling air quality uncertainties},
+  author={Lewellen, W.S. and Sykes, R.I.},
   journal={Journal of Atmospheric and Oceanic Technology},
   volume={6},
   number={5},
@@ -347,8 +395,8 @@
 
 
 @article{enting1990inverse,
-  title={Inverse Problems in Atmospheric Constituent Studies: II. Sources in the Free Atmosphere},
-  author={Enting, IG and Newsam, GN},
+  title={Inverse problems in atmospheric constituent studies: {II}. sources in the free atmosphere},
+  author={Enting, I.G. and Newsam, G.N.},
   journal={Inverse Problems},
   volume={6},
   number={3},
@@ -359,30 +407,35 @@
 
  %First approach to use statistics to estimate sources
 @article{lin2002relative,
-  title={Relative Source Contribution Analysis Using an Air Trajectory Statistical Approach},
+  title={relative source contribution analysis using an air trajectory statistical approach},
   author={Lin, Ching-Ho and Chang, Len-Fu W.},
   journal={Journal of Geophysical Research: Atmospheres},
   volume={107},
   number={D21},
+  pages={ACH 6-1 -- ACH 6-10},
   year={2002},
   publisher={Wiley Online Library}
 }
 
 
 @article{lushi2010inverse,
-  title={An Inverse Gaussian Plume Approach for Estimating Atmospheric Pollutant Emissions from Multiple Point Sources},
-  author={Lushi, Enkeleida and Stockie, John M.},
-  journal={Atmospheric Environment},
-  volume={44},
-  number={8},
-  pages={1097--1107},
-  year={2010},
-  publisher={Elsevier}
+  author =	 {Lushi, E. and Stockie, J. M.},
+  title =	 {An inverse {G}aussian plume approach for estimating
+                  atmospheric pollutant emissions from multiple point
+                  sources},
+  journal =	 {Atmospheric Environment},
+  year =	 2010,
+  volume =	 44,
+  number =	 8,
+  pages =	 {1097-1107},
+  adsurl =	 {http://adsabs.harvard.edu/abs/2010AtmEn..44.1097L},
+  adsnote =	 {Provided by the SAO/NASA Astrophysics Data System}
 }
 
 
+
 @article{skiba2003method,
-  title={On a Method of Detecting the Industrial Plants which Violate Prescribed Emission Rates},
+  title={On a method of detecting the industrial plants which violate prescribed emission rates},
   author={Skiba, Yuri N.},
   journal={Ecological Modelling},
   volume={159},
@@ -393,7 +446,7 @@
 }
 
 @article{sohn2002rapidly,
-  title={Rapidly Locating and Characterizing Pollutant Releases in Buildings},
+  title={Rapidly locating and characterizing pollutant releases in buildings},
   author={Sohn, Michael D. and Reynolds, Pamela and Singh, Navtej and Gadgil, Ashok J.},
   journal={Journal of the Air \& Waste Management Association},
   volume={52},
@@ -403,30 +456,46 @@
   publisher={Taylor \& Francis}
 }
 
+
+
 @article{hosseini2016bayesian,
-  title={Bayesian Estimation of Airborne Fugitive Emissions Using a Gaussian Plume Model},
-  author={Hosseini, Bamdad and Stockie, John M.},
-  journal={Atmospheric Environment},
-  volume={141},
-  pages={122--138},
-  year={2016},
-  publisher={Elsevier}
+  title =	 "Bayesian estimation of airborne fugitive emissions
+                  using a {G}aussian plume model",
+  journal =	 "Atmospheric Environment",
+  volume =	 141,
+  pages =	 "122-138",
+  year =	 2016,
+  issn =	 "1352-2310",
+  doi =		 "http://dx.doi.org/10.1016/j.atmosenv.2016.06.046",
+  url =
+                  "http://www.sciencedirect.com/science/article/pii/S1352231016304794",
+  author =	 "Bamdad Hosseini and John M. Stockie",
+  keywords =	 "Pollutant dispersion",
+  keywords =	 "Gaussian plume",
+  keywords =	 "Particle deposition",
+  keywords =	 "Inverse problem",
+  keywords =	 "Bayesian estimation "
 }
 
+
+
+
 @article{keats2007bayesian,
-  title={Bayesian Inference for Source Determination with Applications to a Complex Urban Environment},
-  author={Keats, Andrew and Yee, Eugene and Lien, Fue-Sang},
-  journal={Atmospheric environment},
-  volume={41},
-  number={3},
-  pages={465--479},
-  year={2007},
-  publisher={Elsevier}
+  title =	 {Bayesian inference for source determination with
+                  applications to a complex urban environment},
+  author =	 {Keats, Andrew and Yee, Eugene and Lien, Fue-Sang},
+  journal =	 {Atmospheric Environment},
+  volume =	 41,
+  number =	 3,
+  pages =	 {465-479},
+  year =	 2007,
+  publisher =	 {Elsevier}
 }
+
 
 
 @article{van1985estimation,
-  title={Estimation of Atmospheric Boundary Layer Parameters for Diffusion Applications},
+  title={Estimation of atmospheric boundary layer parameters for diffusion applications},
   author={Van Ulden, AP and Holtslag, AAM},
   journal={Journal of Climate and Applied Meteorology},
   volume={24},
@@ -447,7 +516,7 @@
 %%%%%%%%%%%%%Outside the introduction %%%%%%%%%%%%%5
 
 @article{roberts2009examples,
-  title={Examples of Adaptive MCMC},
+  title={Examples of adaptive MCMC},
   author={Roberts, Gareth O. and Rosenthal, Jeffrey S.},
   journal={Journal of Computational and Graphical Statistics},
   volume={18},
@@ -458,7 +527,7 @@
 }
 
 @inproceedings{osborne2009gaussian,
-  title={Gaussian Processes for Global Optimization},
+  title={Gaussian processes for global optimization},
   author={Osborne, Michael A. and Garnett, Roman and Roberts, Stephen J.},
   booktitle={3rd international conference on learning and intelligent optimization (LION3)},
   pages={1--15},
@@ -471,7 +540,7 @@
 
 @book{hubbard2015vector,
   title={Vector Calculus, Linear Algebra, and Differential Forms: a Unified Approach},
-  author={Hubbard, John H. and Hubbard, Barbara Burke},
+  author={Hubbard, John H. and Hubbard, Barbara B.},
   year={2015},
   publisher={Matrix Editions}
 }
@@ -480,7 +549,7 @@
 
 @book{bulmer1979principles,
   title={Principles of Statistics},
-  author={Bulmer, Michael George},
+  author={Bulmer, Michael G.},
   year={1979},
   publisher={Courier Corporation}
 }
