--- a/Thesis.tex
+++ b/Thesis.tex
@@ -30,9 +30,9 @@ advection-diffusion problems arising in atmospheric sources inversion}
 \thesistype{Thesis}
 \author{Juan Gabriel Garcia Osorio}
 \previousdegrees{%
-	B.Sc., National University of Colombia, 2013\\
-	B.Sc., National University of Colombia, 2015}
-\degree{Master of Science (Mathematics)}
+	B.Sc(Physics)., National University of Colombia, 2013\\
+	B.Sc(Mathematics)., National University of Colombia, 2015}
+\degree{Master of Science}
 \discipline{Mathematics}
 \department{Department of  Mathematics}
 \faculty{Faculty of  Science}
@@ -44,9 +44,9 @@ advection-diffusion problems arising in atmospheric sources inversion}
 Experimental Design, Model Emulation, Bayesian Inversion, Atmospheric Dispersion, Source Inversion.}
 
 \committee{%
-	\chair{TBD}{Professor}
+	\chair{Razvan Fetecau}{Professor}
 	\member{John Stockie}{Senior Supervisor\\Professor}
-	\member{Paul Tupper}{Internal Examiner\\Assistant Professor}
+	\member{Paul Tupper}{Committee\\Professor}
 }
 
 
@@ -238,12 +238,29 @@ in atmospheric dispersion using the Bayesian framework.
 
 
 \begin{dedication}
-	This is an optional page.
+	To the memory of my late grandma Josefina.
 \end{dedication}
 
 
 \begin{acknowledgements}
-	This is an optional page.
+Like everything in life, this work is the contribution of many people. I apologize if in the next paragraphs
+I omit to mention someone that was part of this journey to complete my masters, but rest assure that it is an honest
+mistake. First I would like to express my gratitude to the people that is closest to my life, my best friends 
+that coincidentally are also my siblings and girlfriend. Maria Jose, Juan Lukas and Paola you are the reason why I
+do what I do, you are the people that make success feel meaningful and worth sharing. Thanks for being there for
+me and give me your unconditional love, you guys make me a happy person. 
+
+
+I also want to thank John,
+for his unconditional support during this process, but most importantly for 
+believing in me and giving me the opportunity 
+to come here to this amazing country and amazing university to keep growing as a person and to look for
+a better future for me and my family. A very special gratitude goes to Bamdad for his infinite patience
+with me, and the many hours and expertise he put into helping me ensemble this thesis. Last but not least
+a very special thank you to all my friends at PIMS and SFU that made my way through grad school  a total blast 
+and all the professor to whom I had the fortune to learn, not only academically but also how to be a better
+person.
+
 \end{acknowledgements}
 
 \addtoToC{Table of Contents}%
