Tesis fully completed

--- a/Thesis.tex
+++ b/Thesis.tex
@@ -30,8 +30,8 @@ advection-diffusion problems arising in atmospheric sources inversion}
 \thesistype{Thesis}
 \author{Juan Gabriel Garcia Osorio}
 \previousdegrees{%
-	B.Sc(Physics)., National University of Colombia, 2013\\
-	B.Sc(Mathematics)., National University of Colombia, 2015}
+	B.Sc(Physics), National University of Colombia, 2013\\
+	B.Sc(Mathematics), National University of Colombia, 2015}
 \degree{Master of Science}
 \discipline{Mathematics}
 \department{Department of  Mathematics}
@@ -44,9 +44,10 @@ advection-diffusion problems arising in atmospheric sources inversion}
 Experimental Design, Model Emulation, Bayesian Inversion, Atmospheric Dispersion, Source Inversion.}
 
 \committee{%
-	\chair{Razvan Fetecau}{Professor}
+	\chair{Razvan Fetecau}{Associate Professor}
 	\member{John Stockie}{Senior Supervisor\\Professor}
 	\member{Paul Tupper}{Committee\\Professor}
+	\member{Ben Adcock}{Internal Examiner\\Assitant Professor}
 }
 
 
@@ -245,8 +246,8 @@ in atmospheric dispersion using the Bayesian framework.
 \begin{acknowledgements}
 Like everything in life, this work is the contribution of many people. I apologize if in the next paragraphs
 I omit to mention someone that was part of this journey to complete my masters, but rest assure that it is an honest
-mistake. First I would like to express my gratitude to the people that is closest to my life, my best friends 
-that coincidentally are also my siblings and girlfriend. Maria Jose, Juan Lukas and Paola you are the reason why I
+mistake. First I would like to express my gratitude to the people that is closest to my life: my mom and my best friends 
+that coincidentally are also my siblings and girlfriend. Luisa, Maria Jose, Juan Lukas and Paola you are the reason why I
 do what I do, you are the people that make success feel meaningful and worth sharing. Thanks for being there for
 me and give me your unconditional love, you guys make me a happy person. 
 
